tests/diagnostics/statements/control_flow/unreachable_after_abort/expect.txt
# exit: 1
input/main.coppice:3:5: error: unreachable code
      return 1
      ^
